fix dropdown menu sitting behind footer

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,7 +5,6 @@ body {
     height: 100%;
     font-family: 'Kanit', sans-serif;
     background-color: #474746;
-    margin-bottom: 150px;
     background: linear-gradient (rgba(255, 246, 242, 0.9), rgba(255, 246, 242, 0.9)), url('/media/playing-cards-background.jpg');
 }
 
@@ -302,8 +301,8 @@ footer {
     background-color: #3B4C31;
     padding: 20px 0;
     text-align: center;
-    position: fixed;
-    bottom: 0;
+
+    
     width: 100%;
     color: white;
     background: #3B4C31;
